--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Saveo-Map-Interface</title>
   </head>
+  <style>
+    body{
+      background-color: cornflowerblue !important;
+    }
+  </style>
   <body>
     <div id="root"></div>
   </body>
