--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   </head>
   <style>
     body{
-      background-color: cornflowerblue !important;
+      background-color: rgb(139, 163, 206) !important;
     }
   </style>
   <body>
